[FIX] Removed em {vertical-align: middle}, which was causing italic text to be below baseline. Thanks to lindon bringing this up.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/4.x@23500 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/layout.css
+++ b/styles/layout/layout.css
@@ -56,10 +56,6 @@ label {
 	vertical-align: middle;
 }
 
-em {
-	vertical-align: middle;
-}
-
 form {
 	margin: 0;
 	padding: 0;
